Filters display on mobile fixed

--- a/src/components/Mailbox/index.sass
+++ b/src/components/Mailbox/index.sass
@@ -14,9 +14,8 @@
         .filter-group
             display: flex
             flex-direction: column
-            min-width: 400px
             flex-grow: 1
-            flex-basis: 0
+            flex-basis: 400px
             margin: 10px
             .filter-label
                 padding: 3px
